[package]
name = "program"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.9"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
arrayref = "0.3.6"
spl-associated-token-account =  { version = "1.0.1", features = ["no-entrypoint"] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "dcstaking3"
crate-type = ["cdylib", "lib"]